CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(HELLOHOMEWORK)

SET(CMAKE_BUILD_TYPE "Release")

INCLUDE_DIRECTORIES(./include)

ADD_LIBRARY(hello SHARED ./src/hello.cpp)

INSTALL(TARGETS hello
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(FILES ./include/hello.h DESTINATION include)

ADD_EXECUTABLE(useHello useHello.cpp)
TARGET_LINK_LIBRARIES(useHello hello)